# spring-dev-orchestrator

./: .cursorignore  .cursorrules  .gitignore  BUILD.md  README.md  build.cmd  build.ps1  build.sh  start.cmd  start.ps1  start.sh
.github/workflows/: build-cross-platform-artifacts.yml
orchestrator-core/: pom.xml
orchestrator-core/src/main/java/dev/safra/orchestrator/core/: Args.java  Json.java  Main.java
orchestrator-core/src/main/java/dev/safra/orchestrator/model/: Container.java  ProjectType.java  ServiceDefinition.java  ServiceDescriptor.java  ServiceRuntime.java  ServiceStatus.java
orchestrator-desktop/: index.html  package-lock.json  package.json  tailwind.config.js
orchestrator-desktop/scripts/: run-dev.mjs  smoke-core-ipc.mjs
orchestrator-desktop/src/: index.css
orchestrator-desktop/src-tauri/: Cargo.toml  tauri.conf.json
orchestrator-desktop/src-tauri/capabilities/: main-capabilities.json
orchestrator-desktop/src-tauri/icons/: icon.icns
orchestrator-desktop/src-tauri/linux/: dev.safra.orchestrator.metainfo.xml
orchestrator-desktop/src-tauri/src/: core_bridge.rs  java_env.rs  java_runtime.rs  main.rs
orchestrator-desktop/src/api/: client.ts  types.ts
orchestrator-desktop/src/ui/: App.tsx  ContainersPanel.tsx  ContextMenu.tsx  Icons.tsx  ImportSection.tsx  LogsPanel.tsx  Modal.tsx  MonitorPanel.tsx  ServicePortModal.tsx  ServiceTable.tsx  SettingsPanel.tsx  StatusBar.tsx  Toast.tsx  Tooltip.tsx  useDragReorder.ts
orchestrator-ui/src/ui/: ServiceTable.tsx
scripts/install/: install.ps1  install.sh
(+24 files in other folders)
