[package]
name = "Orchestrator"
version = "1.0.2"
description = "Orchestrator Desktop (Tauri)"
authors = ["Leandro Safra"]
license = "MIT"
repository = "https://github.com/SafraPC/orchestrator"
homepage = "https://github.com/SafraPC/orchestrator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dunce = "1"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
